# morphology-adaptive

./: .gitignore  ADR_001_Current_Architecture.md  Cargo.toml  Dockerfile  README.Rust.MD  build.ps1  game_logic.py  generate_gif.ps1  index.html  main.py  requirements.txt  script.js  vercel.json
.github/workflows/: test.yml
pkg/: README.md  morphology_adaptive.d.ts  morphology_adaptive.js  morphology_adaptive_bg.wasm  morphology_adaptive_bg.wasm.d.ts
public/: game_logic.py  index.html  script.js
public/data/policies/attn/: weights.json
public/pkg/: morphology_adaptive.d.ts  morphology_adaptive.js  morphology_adaptive_bg.wasm  morphology_adaptive_bg.wasm.d.ts  package.json
python/scripts/: export_weights.py  render_trajectory.py
rust/: lib.rs
rust/components/: creature.rs  mod.rs  policy.rs  rules.rs  state.rs
src/: lib.rs
src/components/: mod.rs  physics.rs  soft_body.rs  state.rs
src/components/x/: 0.lib.rs
test/: test_game_logic.py
