[package]
name = "morphology_adaptive_wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
web-sys = "0.3"
js-sys = "0.3"
console_error_panic_hook = { version = "0.1.6", optional = true }
wee_alloc = { version = "0.4.5", optional = true }
nalgebra = "0.32"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = ["console_error_panic_hook"]